--- a/mission_to_mars.ipynb
+++ b/mission_to_mars.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,12 +13,24 @@
     "import requests\n",
     "import pymongo\n",
     "from splinter import Browser\n",
-    "import selenium import webdriver"
+    "#import selenium import webdriver"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def init_browser():\n",
+    "    # @NOTE: Replace the path with your actual path to the chromedriver\n",
+    "    executable_path = {\"executable_path\": \"/desktop/chromedriver\"}\n",
+    "    return Browser(\"chrome\", **executable_path, headless=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -65,6 +77,10 @@
      "output_type": "stream",
      "text": [
       "[<div class=\"content_title\">\n",
+      "<a href=\"/news/8402/nasas-insight-places-first-instrument-on-mars/\">\n",
+      "NASA's InSight Places First Instrument on Mars\n",
+      "</a>\n",
+      "</div>, <div class=\"content_title\">\n",
       "<a href=\"/news/8387/nasa-announces-landing-site-for-mars-2020-rover/\">\n",
       "NASA Announces Landing Site for Mars 2020 Rover\n",
       "</a>\n",
@@ -84,10 +100,6 @@
       "<a href=\"/news/8325/nasa-is-ready-to-study-the-heart-of-mars/\">\n",
       "NASA is Ready to Study the Heart of Mars\n",
       "</a>\n",
-      "</div>, <div class=\"content_title\">\n",
-      "<a href=\"/news/8322/nasa-briefing-on-first-mission-to-study-mars-interior/\">\n",
-      "NASA Briefing on First Mission to Study Mars Interior\n",
-      "</a>\n",
       "</div>]\n"
      ]
     }
@@ -99,31 +111,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "ResultSet object has no attribute 'get_text'. You're probably treating a list of items like a single item. Did you call find_all() when you meant to call find()?",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-100-5edcb3ecc81b>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mnews_p\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0msoup\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfind_all\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"div\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mclass_\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m\"rollover_description_inner\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mp\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnews_p\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget_text\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mp\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\AppData\\Local\\conda\\conda\\envs\\PythonData\\lib\\site-packages\\bs4\\element.py\u001b[0m in \u001b[0;36m__getattr__\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m   1882\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0m__getattr__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mkey\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1883\u001b[0m         raise AttributeError(\n\u001b[1;32m-> 1884\u001b[1;33m             \u001b[1;34m\"ResultSet object has no attribute '%s'. You're probably treating a list of items like a single item. Did you call find_all() when you meant to call find()?\"\u001b[0m \u001b[1;33m%\u001b[0m \u001b[0mkey\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   1885\u001b[0m         )\n",
-      "\u001b[1;31mAttributeError\u001b[0m: ResultSet object has no attribute 'get_text'. You're probably treating a list of items like a single item. Did you call find_all() when you meant to call find()?"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[<div class=\"rollover_description_inner\">\n",
+      "In deploying its first instrument onto the surface of Mars, the lander completes a major mission milestone.\n",
+      "</div>, <div class=\"rollover_description_inner\">\n",
+      "After a five-year search, NASA has chosen Jezero Crater as the landing site for its upcoming Mars 2020 rover mission.\n",
+      "</div>, <div class=\"rollover_description_inner\">\n",
+      "It's the beginning of the end for the planet-encircling dust storm on Mars. But it could still be weeks, or even months, before skies are clear enough for NASA's Opportunity rover to recharge its batteries and phone home. \n",
+      "</div>, <div class=\"rollover_description_inner\">\n",
+      "NASA’s Curiosity rover has found evidence on Mars with implications for NASA’s search for life.\n",
+      "</div>, <div class=\"rollover_description_inner\">\n",
+      "NASA is investing in technology concepts, including several from JPL, that may one day be used for future space exploration missions.\n",
+      "</div>, <div class=\"rollover_description_inner\">\n",
+      "NASA is about to go on a journey to study the center of Mars.\n",
+      "</div>]\n"
      ]
     }
    ],
    "source": [
     "news_p = soup.find_all(\"div\", class_=\"rollover_description_inner\")\n",
-    "p = news_p.get_text()\n",
-    "print(p)"
+    "print(news_p)\n",
+    "#p = news_p.get_text()\n",
+    "#print(p)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -141,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +169,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Sol 2258 (2018-12-13), high -6C/21F, low -70C/-93F, pressure at 8.41 hPa, daylight 06:37-18:51\n",
+      "Sol 2270 (2018-12-25), high -5C/23F, low -75C/-102F, pressure at 8.35 hPa, daylight 06:41-18:53\n",
       "\n"
      ]
     }
@@ -169,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -260,7 +280,7 @@
        "8          Recorded By:           Egyptian astronomers"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -296,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -355,7 +375,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
